# taptap

./: Cargo.toml  LICENSE  README.md
docs/: protocol.md
src/: barcode.rs  capture.rs  config.rs  gateway.rs  lib.rs  main.rs  observer.rs  pv.rs  test_data.rs
src/gateway/: link.rs  physical.rs  transport.rs
src/gateway/link/: address.rs  crc.rs  escaping.rs  receive.rs
src/gateway/physical/: serialport.rs  tcp.rs  termios.rs  trace_meshdcd.rs
src/gateway/physical/trace_meshdcd/: target.rs  traced_process.rs
src/gateway/transport/: receiver.rs
src/observer/: event.rs  node_table.rs  slot_clock.rs  tests.rs
src/pv/: application.rs  link.rs  network.rs  physical.rs
src/pv/application/: node_table.rs  packet_type.rs  power_report.rs  receiver.rs  string.rs  topology_report.rs
src/pv/link/: slot_counter.rs
