[package]
name = "taptap"
description = "An implementation of the Tigo TAP protocol"
authors = ["Will Glynn"]
repository = "https://github.com/willglynn/taptap"
keywords = ["solar"]
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "MIT"

[features]
default = ["serialport", "clap", "env_logger"]

[dependencies]
# Library dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0.0-alpha.2", features = ["chrono04"] }
chrono = { version = "0.4.38", features = ["serde"] }
libc = "0.2.155"
zerocopy = { version = "0.8.0-alpha.16", features = ["derive"] }
flate2 = "1.0"
log = "0.4.22"

# Optional library features
serialport = { version = "4.4", optional = true }

# Executable dependencies
clap = { version = "4.5.13", features = ["derive"], optional = true }
env_logger = { version = "0.11.5", optional = true }

[[bin]]
name = "taptap"
required-features = ["clap", "env_logger"]
